checkpoint: consolidar estado geral pré-automação